  * Make "--test-manifest" work when running chrome, browser-chrome and a11y
    mochitests so that we can maintain a distro manifest for these
    - add debian/patches/mochitest-allow-test-manifest-for-chrome.patch
    - update debian/patches/series.in
  * Disable failing reftests
    - add d/p/test-overrides/reftest-disable-failing-tests.patch
    - update debian/patches/series.in

 -- Chris Coulson <chris.coulson@canonical.com>  Tue, 20 Nov 2012 09:43:14 +0000

firefox-trunk (19.0~a1~hg20121118r113642-0ubuntu1) quantal; urgency=low

  * New upstream snapshot v19.0 A1 20121118R113642

  * Update globalmenu-extension to 3.7 prerelease r504
    - Fix crash in uGlobalMenu::InitializePopup
    - Update for imagelib changes in Firefox 19
    - Update for nsCAutoString removal in Firefox 19
    - Don't #include mozilla/dom/Element.h anywhere, as that now pulls
      in a lot of internal headers since Firefox 19
    - Fix issue with stale entries being left in the Recently Closed
      Tabs / Windows menus
    - Make logging work correctly on debug builds
    - Handle submenu's being reopened without getting a close event
      in between. We don't seem to get a close event when a menuitem
      is activated
  * Fix LP: #1064423 - "Submitting your report..." shows missing-icon icon.
    Install the throbber icon in the package
    - update debian/firefox.install.in
  * Refresh patches
    - update debian/patches/mozilla-kde.patch
    - update debian/patches/allow-lockPref-everywhere.patch
  * Drop unneeded patch
    - remove debian/patches/no-internal-api-in-external-headers.patch
    - update debian/patches/series.in
  * Build with --disable-webrtc on all architectures except for i386 and amd64
    - update debian/config/mozconfig.in
  * Switch to encrypted search for Google
    - update debian/searchplugins/en-GB/google.xml
    - update debian/searchplugins/en-US/google.xml
    - update debian/searchplugins/en-ZA/google.xml